client/styles/helperElements.scss
.contentPadding {
    padding: 20px;

    &--extraBottom {
        padding-bottom: 50px;
    }
}

.headerMargin {
    margin-top: 48px;

    &--two {
        margin-top: 96px;
    }
}

.rightPadding {
    padding-right: 20px;
}

.bottomPadding {
    padding-bottom: 20px;
}

.bottomMargin {
    margin-bottom: 20px;
    &--10 {
        margin-bottom: 10px;
    }
}

.topMargin {
    margin-top: 1em;
}

.bottomMargin0 {
    margin-bottom: 0;
}

.leftSpace {
    margin-left: .5em;
}

.rightSpace {
    margin-right: .5em;

    &--small {
        margin-right: .2em;
    }
}

.bottomSpace {
    margin-bottom: .5em;
}

.countLabel {
    display: inline-block;
    background-color: #90bccf;
    color: #fff;
    border-radius: 55px;
    line-height: 1em;
    height: 1em;
    font-size: 11px;
    padding: 4px 6px;
    font-family: arial, sans-serif;
}

.iconButton {
    border: none;
    background: none;
    padding: 0;
}

.text {
    &--light {
        color: $gray;
    }

    &--lighter {
        color: $grayLight;
    }

    &--dark {
        color: $grayDarker;
    }

    &--italic {
        font-style: italic;
    }

    &--bold {
        font-weight: 500;
    }

    &--thin {
        font-weight: 300;
    }

    &--uppercase {
        text-transform: uppercase;
    }

    &--small {
        font-size: .9em;
    }

    &--smaller {
        font-size: 9px;
    }

    &--smallHeading {
        font-size: 12px;
        line-height: 1em;
        margin-bottom: .8em;
        color: $gray;
    }

    &--right {
        text-align: right;
    }

    &--verticalMiddle {
        vertical-align: middle;
    }

    &--blue {
        color: $sd-blue;
    }

    &--keyword {
        color: $sd-keyword;
    }

    &--center {
        text-align: center;
    }

    &--left {
        text-align: left !important;
    }

    &--right {
        text-align: right !important;
    }
}

.cursorPointer {
    cursor: pointer;
}

.static {
    position: static;
}

.publisherBoxShadow {
    max-height: 570px;
    overflow-y: scroll;
    box-shadow: 0px 1px 4px 0 rgba(0, 0, 0, 0.2);
    .list-without-items {
        margin-left: auto;
        margin-right: auto;
        line-height: 38px;
        height: 38px;
        text-align: center;
        color: #999;
    }
}

.flex-pull-right:first-child, :not(.flex-pull-right) + .flex-pull-right {
    margin-left: auto;
}

.publisherPaddingRight10 {
    padding-right: 10px !important;
}

.manualListSaveBtn {
    position: fixed;
    right: 25px;
    top: calc(50% - 5px);
    padding: 10px;
    background: rgba(0, 0, 0, 0.1);
    border-radius: 3px;
}

.label--facebook {
    background-color: #000080;
    color: $grayLighter;
}

.checkboxInlineRight {
    vertical-align: middle;
    margin-left: 5px;
    margin-right: 0;
}

.minHeightLine {
    min-height: 18px;
}

.icon--small {
    width: 14px;
    height: 14px;
    line-height: 14px;
    font-size: 14px;
}

.width200{
    width: 200px;
}

.bg--white {
    background-color: white !important;
}

.absoluteBottom {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

.codeBlock {
    background-color: #f2f2f2;
    border-radius: 3px;
    padding: 1em 1.5em;
    margin: 2rem 0;
    font-family: Consolas, Menlo, Courier, monospace;
    font-size: 85%;
}

.shadowBlock {
    border-radius: 3px;
    padding: 1.5em;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 0 1px 7px rgba(0, 0, 0, 0.16);
    margin: 1em 0;
}

.iconFakeSpacer {
    display: inline-block;
    width: 16px;
    height: 16px;
}

.absPosition {
    position: absolute;

    &--topRight {
        top: 2rem;
        right: 2rem;
    }
}

.maxWidth100 {
    max-width: 100%;
}

